--- a/app.json
+++ b/app.json
@@ -4,24 +4,29 @@
     "slug": "artisan-connect-rn-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      "expo-apple-authentication",
+      "expo-font"
+    ],
     "splash": {
-      "image": "./assets/splash.png",
+      "image": ".src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": ".src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": ".src/assets/favicon.png"
     }
   }
 }
