--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/figtree": "^0.2.3",
+    "@react-native-community/netinfo": "11.3.1",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-apple-authentication": "~6.4.2",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@react-native-community/netinfo": "11.3.1",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.27.6",
     "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
