--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-reanimated": "~3.10.1",
-    "@stripe/stripe-react-native": "0.37.2"
+    "@stripe/stripe-react-native": "0.37.2",
+    "expo-notifications": "~0.28.19",
+    "expo-clipboard": "~6.0.3",
+    "expo-crypto": "~13.0.2",
+    "@shopify/flash-list": "1.6.4",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
