--- a/app.json
+++ b/app.json
@@ -4,14 +4,14 @@
     "slug": "artisan-connect-rn-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "src/assets/icon.png",
     "userInterfaceStyle": "light",
     "plugins": [
       "expo-apple-authentication",
       "expo-font"
     ],
     "splash": {
-      "image": ".src/assets/splash.png",
+      "image": "src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -21,12 +21,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": ".src/assets/adaptive-icon.png",
+        "foregroundImage": "src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": ".src/assets/favicon.png"
+      "favicon": "src/assets/favicon.png"
     }
   }
 }
