--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-image": "~1.13.0",
+    "expo-speech": "~12.0.2",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
