--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/figtree": "^0.2.3",
+    "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -25,8 +26,11 @@
     "expo-clipboard": "~6.0.3",
     "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
     "expo-linking": "~6.3.1",
     "expo-notifications": "~0.28.19",
+    "expo-sharing": "~12.0.1",
+    "expo-speech": "~12.0.2",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -35,9 +39,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-image": "~1.13.0",
-    "expo-speech": "~12.0.2",
-    "expo-sharing": "~12.0.1"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
