--- a/app.json
+++ b/app.json
@@ -8,7 +8,15 @@
     "userInterfaceStyle": "light",
     "plugins": [
       "expo-apple-authentication",
-      "expo-font"
+      "expo-font",
+      [
+        "expo-camera", 
+        {
+          "cameraPermission": "Allow Artisan Connect to access your camera",
+          "microphonePermission": "Allow Artisan Connect to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
     ],
     "splash": {
       "image": "src/assets/splash.png",
