--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "@shopify/flash-list": "1.6.4",
     "@stripe/stripe-react-native": "0.37.2",
     "@tanstack/react-query": "^5.59.16",
@@ -33,13 +34,18 @@
     "expo-speech": "~12.0.2",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.2.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "redux-persist": "^6.0.0",
+    "expo-task-manager": "~11.8.2",
+    "expo-background-fetch": "~12.0.1",
+    "expo-camera": "~15.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
