--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "redux-persist": "^6.0.0",
     "expo-task-manager": "~11.8.2",
     "expo-background-fetch": "~12.0.1",
-    "expo-camera": "~15.0.16"
+    "expo-camera": "~15.0.16",
+    "lottie-react-native": "6.7.0",
+    "react-native-maps": "1.14.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-local-authentication": "~14.0.1",
+    "expo-image-picker": "~15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
